--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,12 +15,12 @@ Description: Returns almost all features that had been extracted from Position S
              and 20 columns produced by 'PSI-BLAST'  which is a program to produce
              'PSSM' Matrix from multiple sequence alignment of proteins
              see <https://www.ncbi.nlm.nih.gov/books/NBK2590/> for mor details. some 
-             of these features are:'D-FPSSM-S-FPSSM' 'Zahiri, J., et al.'(2013)
+             of these features are:'D-FPSSM-S-FPSSM' Zahiri, J., et al.(2013)
              <DOI:10.1016/j.ygeno.2013.05.006>.'k-separated-bigrams-PSSM'
-             'Saini, H., et al.'(2016)<DOI:10.17706/jsw.11.8.756-767>. 'RPSSM' 'Ding, S., et al.'
-             (2014)<DOI:10.1016/j.biochi.2013.09.013>.'EDP-EEDP-MEDP' 'Zhang, L.Zhao, X. and Kong, L.'
-             (2014)<DOI:10.1016/j.jtbi.2014.04.008>.'smoothed-PSSM' 'Cheng, C.W., et al.'(2008)
-             <DOI:10.1186/1471-2105-9-S12-S6>.'DP-PSSM Juan, E.Y., et al.'(2009)
+             Saini, H., et al.(2016)<DOI:10.17706/jsw.11.8.756-767>. 'RPSSM' Ding, S., et al.
+             (2014)<DOI:10.1016/j.biochi.2013.09.013>.'EDP-EEDP-MEDP' Zhang, L.Zhao, X. and Kong, L.
+             (2014)<DOI:10.1016/j.jtbi.2014.04.008>.'smoothed-PSSM' Cheng, C.W., et al.(2008)
+             <DOI:10.1186/1471-2105-9-S12-S6>.'DP-PSSM' Juan, E.Y., et al.(2009)
              <DOI:10.1109/CISIS.2009.194>. 
 License: GPL-3
 URL:http://possum.erc.monash.edu/help.jsp,
