--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(consunsus_sequence)
 export(disulfid)
 export(dwt_PSSM)
 export(grey_pssm_pseAAC)
+export(k_mers)
 export(k_seperated_bigrame)
 export(kiderafactor)
 export(pse_pssm)
@@ -30,12 +31,14 @@ export(pssm_ac)
 export(pssm_cc)
 export(pssm_seg)
 export(rpssm)
+export(scsh2)
 export(single_Average)
 export(smoothed_PSSM)
+export(three_mer)
 export(trigrame_pssm)
+import(gtools)
 import(utils)
 importFrom(dtt,dct)
-importFrom(entropy,entropy)
 importFrom(infotheo,mutinformation)
 importFrom(phonTools,lpc)
 importFrom(stats,sd)
